deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clean-ddd-api
  labels:
    app: clean-ddd-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 10000
    protocol: TCP
    name: http
  selector:
    app: clean-ddd-api
